<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.sigmai.stylemento.ui.signup.email.SignUpEmailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="140dp"
            android:text="@{viewModel.pageTitle[viewModel.currentPageIndex]}"
            tools:text="이메일 주소를 입력해주세요"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/signup_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="282dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/primary"
            android:background="@drawable/edittext_background"
            android:hint="@{viewModel.hints[viewModel.currentPageIndex]}"
            android:text="@{viewModel.inputText[viewModel.currentPageIndex]}"
            android:maxLines="1"
            android:inputType="text"/>

        <TextView
            android:id="@+id/validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:text="@{viewModel.validationText[viewModel.currentPageIndex]}"
            tools:text="올바른 이메일 주소를 입력해주세요"
            android:textColor="@color/red"
            android:visibility="@{viewModel.isClickable[viewModel.currentPageIndex] ? View.INVISIBLE : View.VISIBLE}"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_in_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/validation"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:text="@{viewModel.buttonText[viewModel.currentPageIndex]}"
            tools:text="인증번호 받기"
            tools:textColor="@color/primary"
            android:textColor="@{viewModel.isClickable[viewModel.currentPageIndex] ? @color/white : @color/primary}"
            tools:background="@drawable/button_background_type_1"
            android:background="@{viewModel.isClickable[viewModel.currentPageIndex] ? @drawable/button_background_type_2 : @drawable/button_background_type_1}"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="35dp"
            android:text="이전"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/primary"
            android:background="@color/trans_parent"
            android:onClick="@{()->viewModel.previousPage()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
