...
            tools:text="비밀번호를 입력해주세요"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/signup_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="282dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{viewModel.inputText[viewModel.currentPageIndex]}"
...
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:text="다음"
            android:textStyle="bold"
            android:textSize="22sp"
            tools:textColor="@color/primary"
            android:textColor="@{viewModel.isValidPassword[viewModel.currentPageIndex] ? @color/primary : @color/gray_d}"
            android:background="@color/trans_parent"/>

...
