...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="120dp"
                    android:layout_marginStart="20dp"
                    android:text="로그인"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="25sp"/>

                <EditText
                    android:id="@+id/input_email"
...
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/login_with_sns"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="96dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="이메일로 가입하기"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:onClick="@{()->viewModel.onClickSignUp()}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
...
