...
            android:id="@+id/authenticating"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/validation"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:text="인증하기"
            tools:textColor="@color/primary"
            tools:background="@drawable/button_background_type_1"
            android:onClick="@{()->viewModel.authenticate()}"
            android:textColor="@{viewModel.isButtonClickable ? @color/white : @color/primary}"
            android:background="@{viewModel.isButtonClickable ? @drawable/button_background_type_2 : @drawable/button_background_type_1}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
...
